# c-game-of-life

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  launch-game.sh  main.c
